Nav and Sidebar

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
+<nav>
+	<ul class="nav">
+		<li>View Music</li>
+		<li>Add Music</li>
+		<li>Profile</li>
+	</ul>
+</nav>
+<div class="sidebar">
+	<button>Press Me</button>
+</div>
 <body>
 
 
