--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</ul>
 </nav>
 <div class="sidebar">
-	<button>Press Me</button>
+	<button class="buttonFilter">Press Me</button>
 </div>
 <body>
 
