--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<nav>
-	<ul class="nav">
-		<li>View Music</li>
-		<li>Add Music</li>
-		<li>Profile</li>
-	</ul>
-</nav>
-<div class="sidebar">
-	<button class="buttonFilter">Press Me</button>
-</div>
-<body>
+	<nav>
+		<ul class="nav">
+			<li>View Music</li>
+			<li>Add Music</li>
+			<li>Profile</li>
+		</ul>
+	</nav>
 
+<body>
+	<div class="sidebar">
+		<p>Insert range slider.</p>
+		<select class="selectArtist">
+		  <option value="tobyMac">tobyMac</option>
+		  <option value="Chris Tomlin">Chris Tomlin</option>
+		  <option value="for KING COUNTRY">for KING & COUNTRY</option>
+		  <option value="The Afters">The Afters</option>
+		  <option value="Third Day">Third Day</option>
+		</select>
+		<button class="buttonFilter">Filter</button>
+	</div>
+
+	<div class="yellowContent">
+		
+	</div>
 
 </body>
 </html>
