--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 		  <option value="The Afters">The Afters</option>
 		  <option value="Third Day">Third Day</option>
 		</select>
+		<select class="selectAlbum">
+		  <option value="This Is Not a Test">This Is Not A Test, by tobyMac</option>
+		  <option value="Love Ran Red">Love Ran Red, by Chris Tomlin</option>
+		  <option value="Crave">Crave, by for KING & COUNTRY</option>
+		  <option value="Light Up the Sky">Light Up the Sky, by The Afters</option>
+		  <option value="Revelation">Revelation, by Third Day</option>
+		</select>
 		<button class="buttonFilter">Filter</button>
 	</div>
 
